[project]
name = "acestep-server"
version = "0.1.0"
description = "FastAPI server exposing ACE-Step v1.5 music generation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ace-step",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.sources]
ace-step = { git = "https://github.com/ace-step/ACE-Step-1.5.git" }

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
